<resources>
    <string name="app_name">BaiCuoiKy04</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="c_t_i_kho_n">Đã có tài khoản?</string>
    <string name="ho_c">Hoặc</string>
    <string name="ng_nh_p_b_ng_google">Đăng nhập bằng Google</string>
    <string name="ng_k">Đăng ký</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="ng_k_t_i_kho_n">Đăng ký tài khoản</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="ch_o_m_ng_tr_l_i">Chào mừng trở lại</string>
    <string name="ch_a_c_t_i_kho_n">Chưa có tài khoản?</string>
    <string name="emaill">Email</string>
    <string name="m_t_kh_uu">Mật khẩu</string>
    <string name="ng_nh_p_b_ng_googlee">Đăng nhập bằng Google</string>
    <string name="ng_nh_pp">Đăng nhập</string>
    <string name="qu_n_m_t_kh_uu">Quên mật khẩu?</string>
    <string name="ng_ky">Đăng ký</string>
    <string name="kh_i_ph_c_m_t_kh_u">Khôi phục mật khẩu</string>
    <string name="nh_p_a_ch_email_ng_k_c_a_b_n_ch_ng_t_i_s_g_i_m_t_li_n_k_t_t_l_i_m_t_kh_u">Nhập địa chỉ email đã đăng ký của bạn. Chúng tôi sẽ gửi một liên kết để đặt lại mật khẩu.</string>
    <string name="emaillll">Email</string>
    <string name="g_i">Gửi</string>
    <string name="quay_l_i_ng_nh_p">Quay lại Đăng nhập</string>
    <string name="l_c">Lọc</string>
    <string name="danh_m_c">Danh mục</string>
    <string name="t_nh_tr_ng">Tình trạng</string>
    <string name="t_t_c">Tất cả</string>
    <string name="m_i">Mới</string>
    <string name="qua_s_d_ng">Đã qua sử dụng</string>
    <string name="t_l_i">Đặt lại</string>
    <string name="p_d_ng">Áp dụng</string>
    <string name="gi_cao_n_th_p">Giá: Cao đến thấp</string>
    <string name="gi_th_p_n_cao">Giá: Thấp đến cao</string>
    <string name="m_i_nh_t">Mới nhất</string>
    <string name="s_p_x_p_theo">Sắp xếp theo</string>
    <string name="b_l_c_v_s_p_x_p">Bộ lọc và Sắp xếp</string>
    <string name="kho_ng_gi">Khoảng giá</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="l_u">Đã lưu</string>
    <string name="qu_n_l">Quản lý</string>
    <string name="h_s">Hồ sơ</string>
    <string name="default_web_client_id">585638123502-vg146sfi6vn51pflpmkuu2mkuodujm92.apps.googleusercontent.com</string>


</resources>