<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:background="@android:color/white"
    tools:context=".RegisterActivity">

    <!-- Icon Checkmark ở trên cùng -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo2"
        app:tint="@color/colorPrimary"
        android:layout_marginTop="64dp"/>

    <!-- Tiêu đề -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_k_t_i_kho_n"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

    <!-- Input Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_email_24"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Mật khẩu -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="16dp"
        android:hint="@string/m_t_kh_u">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Nút Đăng ký -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ng_k"
        android:backgroundTint="@color/colorPrimary"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:cornerRadius="12dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Nút Đăng nhập bằng Google -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoogleSignIn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ng_nh_p_b_ng_google"
        android:textColor="@android:color/black"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textSize="16sp"
        app:icon="@drawable/logo3"
        app:iconTint="@null"
        app:iconPadding="16dp"
        app:strokeColor="@color/light_gray"
        android:layout_marginTop="16dp"
        app:cornerRadius="12dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Dòng phân tách "Hoặc" -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ho_c"
            android:textColor="@android:color/darker_gray"
            tools:ignore="TextContrastCheck" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray"/>
    </LinearLayout>

    <!-- Link chuyển sang Đăng nhập -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_t_i_kho_n"
            android:textColor="@android:color/darker_gray"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ng_nh_p"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        />
</LinearLayout>